# AetherSync

./: README.md  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  aethersync.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/media/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/whisper/: mod.rs
src/components/: AppLayout.tsx  MemoryCard.tsx  Navbar.tsx
src/pages/: Home.tsx  Settings.tsx  Upload.tsx  Vault.tsx
src/theme/: ThemeContent.tsx
src/views/: MemoryViewer.tsx  TimelineView.tsx  UploadMemory.tsx
