[package]
name = "aethersync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "aethersync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-sql = { version = "2.0.0-beta.9", features = ["sqlite"] }
tauri-utils = "2.0.0"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"          
rand = "0.8"   
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "blocking", "rustls-tls"] }           
notify = "6"
